<resources>
    <string name="app_name">Taller Zapatos ZXY</string>

    <string name="company_name">Tienda ZXY</string>

    <!-- Validation errors -->
    <string name="blank_quantity">Por favor, digite la cantidad</string>
    <string name="quantity_greater_than_zero">La cantidad debe ser mayor a cero</string>
    <string name="quantity_label">Cantidad</string>
    <string name="gender_label">Genero</string>
    <string name="shoe_type_label">Tipo de Zapato</string>
    <string name="brand_label">Marca</string>
    <string name="calculate">Calcular</string>
    <string name="clear">Limpiar</string>
    <string name="total_price">Precio Total:</string>
    <string name="result" />

    <string name="men">Hombres</string>
    <string name="women">Mujeres</string>

    <string name="classic">Clasico</string>
    <string name="sneaker">Zapatilla</string>

    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>

    <string-array name="gender_list">
        <item>@string/men</item>
        <item>@string/women</item>
    </string-array>

    <string-array name="shoe_type_list">
        <item>@string/sneaker</item>
        <item>@string/classic</item>
    </string-array>

    <string-array name="brand_list">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
</resources>
