<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp"
        tools:context="com.tramb.trainingmobile.Principal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:text="@string/quantity_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:digits="1234567890"
            android:ems="10"
            android:hint="@string/quantity_label"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/genderTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:text="@string/gender_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" />

        <TextView
            android:id="@+id/shoeTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:text="@string/shoe_type_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/shoeTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" />

        <TextView
            android:id="@+id/brandLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:text="@string/brand_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/brandSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10sp">

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>